{
  "version": 4,
  "terraform_version": "1.1.2",
  "serial": 100,
  "lineage": "0c2b6dec-7fd0-efe6-c8c8-b460e2674f3e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "bar",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0934f2292af07602a",
            "associate_with_private_ip": "10.0.1.20",
            "association_id": "eipassoc-0dc77a7bc61b9ac46",
            "domain": "vpc",
            "id": "eipalloc-0934f2292af07602a",
            "instance": "i-01bde3e951717edfd",
            "network_border_group": "eu-north-1",
            "network_interface": "eni-09262cf7a73e4ef5c",
            "private_dns": "ip-10-0-1-20.eu-north-1.compute.internal",
            "private_ip": "10.0.1.20",
            "public_dns": "ec2-13-51-188-91.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.51.188.91",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.bastian",
            "aws_subnet.pubsub",
            "aws_vpc.tr-test-vpc",
            "random_shuffle.az"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02ad8fb7b323b97e3",
            "associate_with_private_ip": "10.0.2.20",
            "association_id": "eipassoc-0f2cd626509a7896d",
            "domain": "vpc",
            "id": "eipalloc-02ad8fb7b323b97e3",
            "instance": "i-038c29c334e9cbdc7",
            "network_border_group": "eu-north-1",
            "network_interface": "eni-0090361ded921cf37",
            "private_dns": "ip-10-0-2-20.eu-north-1.compute.internal",
            "private_ip": "10.0.2.20",
            "public_dns": "ec2-13-51-15-103.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.51.15.103",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.bastian",
            "aws_subnet.pubsub",
            "aws_vpc.tr-test-vpc",
            "random_shuffle.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e06eb242dcddbd9a",
            "domain": "vpc",
            "id": "eipalloc-0e06eb242dcddbd9a",
            "network_border_group": "eu-north-1",
            "public_dns": "ec2-16-170-123-114.eu-north-1.compute.amazonaws.com",
            "public_ip": "16.170.123.114",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat-eip"
            },
            "tags_all": {
              "Name": "nat-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastian",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bf2ce41790745811",
            "arn": "arn:aws:ec2:eu-north-1:425707662616:instance/i-01bde3e951717edfd",
            "associate_public_ip_address": false,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01bde3e951717edfd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "first-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09262cf7a73e4ef5c",
            "private_dns": "ip-10-0-1-20.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.20",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-092634d9501a062e1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07df8b3969a77de1c",
            "tags": {
              "Name": "bastian0"
            },
            "tags_all": {
              "Name": "bastian0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-008c2db2f3ca49861"
            ]
          },
          "dependencies": [
            "aws_subnet.pubsub",
            "aws_vpc.tr-test-vpc",
            "random_shuffle.az"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bf2ce41790745811",
            "arn": "arn:aws:ec2:eu-north-1:425707662616:instance/i-038c29c334e9cbdc7",
            "associate_public_ip_address": false,
            "availability_zone": "eu-north-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-038c29c334e9cbdc7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "first-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0090361ded921cf37",
            "private_dns": "ip-10-0-2-20.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.20",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ca9832f63e8f5530",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-078e0dfddd595bfc3",
            "tags": {
              "Name": "bastian1"
            },
            "tags_all": {
              "Name": "bastian1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-008c2db2f3ca49861"
            ]
          },
          "dependencies": [
            "aws_subnet.pubsub",
            "aws_vpc.tr-test-vpc",
            "random_shuffle.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tr-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:425707662616:internet-gateway/igw-04da288ee6286a667",
            "id": "igw-04da288ee6286a667",
            "owner_id": "425707662616",
            "tags": {
              "Name": "tr-igw"
            },
            "tags_all": {
              "Name": "tr-igw"
            },
            "vpc_id": "vpc-09f97e8747a07c755"
          },
          "dependencies": [
            "aws_vpc.tr-test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "tr-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e06eb242dcddbd9a",
            "connectivity_type": "public",
            "id": "nat-0a875fa63a6806b23",
            "network_interface_id": "eni-00b88462958e15675",
            "private_ip": "10.0.1.149",
            "public_ip": "16.170.123.114",
            "subnet_id": "subnet-07df8b3969a77de1c"
          },
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_subnet.pubsub",
            "aws_vpc.tr-test-vpc",
            "random_shuffle.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "rout_to_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-04da288ee6286a667",
            "id": "r-rtb-0448e95f0ac11fbee1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0448e95f0ac11fbee",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.tr-igw",
            "aws_route_table.tr-public-rt",
            "aws_vpc.tr-test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "rout_to_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-059401f65b05e41d61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0a875fa63a6806b23",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-059401f65b05e41d6",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_nat_gateway.tr-nat",
            "aws_route_table.tr-private-rt",
            "aws_subnet.pubsub",
            "aws_vpc.tr-test-vpc",
            "random_shuffle.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tr-private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:425707662616:route-table/rtb-059401f65b05e41d6",
            "id": "rtb-059401f65b05e41d6",
            "owner_id": "425707662616",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "tr-private-rt"
            },
            "tags_all": {
              "Name": "tr-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-09f97e8747a07c755"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tr-test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tr-public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:425707662616:route-table/rtb-0448e95f0ac11fbee",
            "id": "rtb-0448e95f0ac11fbee",
            "owner_id": "425707662616",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "tr-public-rt"
            },
            "tags_all": {
              "Name": "tr-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-09f97e8747a07c755"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tr-test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "association_for_rout_to_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01fa5a62cc2750e1b",
            "route_table_id": "rtb-0448e95f0ac11fbee",
            "subnet_id": "subnet-07df8b3969a77de1c"
          },
          "dependencies": [
            "aws_route_table.tr-public-rt",
            "aws_subnet.pubsub",
            "aws_vpc.tr-test-vpc",
            "random_shuffle.az"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-034acae71f7b6a7fc",
            "route_table_id": "rtb-0448e95f0ac11fbee",
            "subnet_id": "subnet-078e0dfddd595bfc3"
          },
          "dependencies": [
            "aws_route_table.tr-public-rt",
            "aws_subnet.pubsub",
            "aws_vpc.tr-test-vpc",
            "random_shuffle.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "association_for_rout_to_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0423fc1cba4e12e22",
            "route_table_id": "rtb-059401f65b05e41d6",
            "subnet_id": "subnet-085024c92df978696"
          },
          "dependencies": [
            "aws_route_table.tr-private-rt",
            "aws_subnet.cachesub",
            "aws_vpc.tr-test-vpc",
            "random_shuffle.az"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fdc2e93f6904124f",
            "route_table_id": "rtb-059401f65b05e41d6",
            "subnet_id": "subnet-014bc574300859edf"
          },
          "dependencies": [
            "aws_route_table.tr-private-rt",
            "aws_subnet.cachesub",
            "aws_vpc.tr-test-vpc",
            "random_shuffle.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "pr-sg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:425707662616:security-group/sg-08903b27307994def",
            "description": "allow-pub-trffc-to-cache",
            "egress": [],
            "id": "sg-08903b27307994def",
            "ingress": [],
            "name": "pub-sg1",
            "name_prefix": "",
            "owner_id": "425707662616",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "pub-sg1"
            },
            "tags_all": {
              "Name": "pub-sg1"
            },
            "timeouts": null,
            "vpc_id": "vpc-09f97e8747a07c755"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tr-test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "pr-sg2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:425707662616:security-group/sg-05d262a4f929853a9",
            "description": "allow-pub-trffc-to-cms",
            "egress": [],
            "id": "sg-05d262a4f929853a9",
            "ingress": [],
            "name": "pr-sg2",
            "name_prefix": "",
            "owner_id": "425707662616",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "pr-sg2"
            },
            "tags_all": {
              "Name": "pr-sg2"
            },
            "timeouts": null,
            "vpc_id": "vpc-09f97e8747a07c755"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tr-test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "pub-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:425707662616:security-group/sg-0f49edc9b34023176",
            "description": "allow-app",
            "egress": [],
            "id": "sg-0f49edc9b34023176",
            "ingress": [],
            "name": "pub-sg",
            "name_prefix": "",
            "owner_id": "425707662616",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "pub-sg"
            },
            "tags_all": {
              "Name": "pub-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09f97e8747a07c755"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tr-test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "r1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-2405079752",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f49edc9b34023176",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.pub-sg",
            "aws_vpc.tr-test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "r2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-969983869",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f49edc9b34023176",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.pub-sg",
            "aws_vpc.tr-test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cachesub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:425707662616:subnet/subnet-085024c92df978696",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-085024c92df978696",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "425707662616",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cachesub0"
            },
            "tags_all": {
              "Name": "cachesub0"
            },
            "vpc_id": "vpc-09f97e8747a07c755"
          },
          "dependencies": [
            "aws_vpc.tr-test-vpc",
            "random_shuffle.az"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:425707662616:subnet/subnet-014bc574300859edf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-014bc574300859edf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "425707662616",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cachesub1"
            },
            "tags_all": {
              "Name": "cachesub1"
            },
            "vpc_id": "vpc-09f97e8747a07c755"
          },
          "dependencies": [
            "aws_vpc.tr-test-vpc",
            "random_shuffle.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prvsub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:425707662616:subnet/subnet-0d3f6f966d050fe1f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d3f6f966d050fe1f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "425707662616",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prvsub0"
            },
            "tags_all": {
              "Name": "prvsub0"
            },
            "vpc_id": "vpc-09f97e8747a07c755"
          },
          "dependencies": [
            "aws_vpc.tr-test-vpc",
            "random_shuffle.az"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:425707662616:subnet/subnet-066379ab5856de05d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-066379ab5856de05d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "425707662616",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prvsub1"
            },
            "tags_all": {
              "Name": "prvsub1"
            },
            "vpc_id": "vpc-09f97e8747a07c755"
          },
          "dependencies": [
            "aws_vpc.tr-test-vpc",
            "random_shuffle.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pubsub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:425707662616:subnet/subnet-07df8b3969a77de1c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07df8b3969a77de1c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "425707662616",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pubsub0"
            },
            "tags_all": {
              "Name": "pubsub0"
            },
            "vpc_id": "vpc-09f97e8747a07c755"
          },
          "dependencies": [
            "aws_vpc.tr-test-vpc",
            "random_shuffle.az"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:425707662616:subnet/subnet-078e0dfddd595bfc3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-078e0dfddd595bfc3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "425707662616",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pubsub1"
            },
            "tags_all": {
              "Name": "pubsub1"
            },
            "vpc_id": "vpc-09f97e8747a07c755"
          },
          "dependencies": [
            "aws_vpc.tr-test-vpc",
            "random_shuffle.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tr-test-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:425707662616:vpc/vpc-09f97e8747a07c755",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-082792ca63b5f96da",
            "default_route_table_id": "rtb-0bcd06e434440fcde",
            "default_security_group_id": "sg-008c2db2f3ca49861",
            "dhcp_options_id": "dopt-071b3fa7b415ce350",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-09f97e8747a07c755",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bcd06e434440fcde",
            "owner_id": "425707662616",
            "tags": {
              "Name": "tr-test-vpc"
            },
            "tags_all": {
              "Name": "tr-test-vpc"
            }
          }
        }
      ]
    }
  ]
}